# openapi-server/src/api.go
@@ -20,7 +20,6 @@ import (
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
 type DefaultApiRouter interface {
 	Get3dMap(http.ResponseWriter, *http.Request)
-	GetChromatogramCount(http.ResponseWriter, *http.Request)
 	GetChromatogramData(http.ResponseWriter, *http.Request)
 	GetChromatogramHeader(http.ResponseWriter, *http.Request)
 	GetChromatograms(http.ResponseWriter, *http.Request)
@@ -32,10 +31,9 @@ type DefaultApiRouter interface {
 	GetInstrumentModel(http.ResponseWriter, *http.Request)
 	GetIonisationMethod(http.ResponseWriter, *http.Request)
 	GetIsolationWindows(http.ResponseWriter, *http.Request)
+	GetRunData(http.ResponseWriter, *http.Request)
 	GetSampleData(http.ResponseWriter, *http.Request)
-	GetScanCount(http.ResponseWriter, *http.Request)
 	GetScanHeader(http.ResponseWriter, *http.Request)
-	GetScanPeakCount(http.ResponseWriter, *http.Request)
 	GetScanPeaks(http.ResponseWriter, *http.Request)
 	GetScansData(http.ResponseWriter, *http.Request)
 	GetSoftware(http.ResponseWriter, *http.Request)
@@ -48,11 +46,10 @@ type DefaultApiRouter interface {
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type DefaultApiServicer interface {
-	Get3dMap(context.Context, string) (ImplResponse, error)
-	GetChromatogramCount(context.Context, string) (ImplResponse, error)
+	Get3dMap(context.Context, string, int64, float64, float64, float64) (ImplResponse, error)
 	GetChromatogramData(context.Context, string, int64) (ImplResponse, error)
 	GetChromatogramHeader(context.Context, string, int64) (ImplResponse, error)
-	GetChromatograms(context.Context, string) (ImplResponse, error)
+	GetChromatograms(context.Context, string, int64, int64, bool) (ImplResponse, error)
 	GetFileName(context.Context, string) (ImplResponse, error)
 	GetInstrumentAnalyzer(context.Context, string) (ImplResponse, error)
 	GetInstrumentData(context.Context, string) (ImplResponse, error)
@@ -60,13 +57,12 @@ type DefaultApiServicer interface {
 	GetInstrumentManufacturer(context.Context, string) (ImplResponse, error)
 	GetInstrumentModel(context.Context, string) (ImplResponse, error)
 	GetIonisationMethod(context.Context, string) (ImplResponse, error)
-	GetIsolationWindows(context.Context, string) (ImplResponse, error)
+	GetIsolationWindows(context.Context, string, bool) (ImplResponse, error)
+	GetRunData(context.Context, string) (ImplResponse, error)
 	GetSampleData(context.Context, string) (ImplResponse, error)
-	GetScanCount(context.Context, string) (ImplResponse, error)
-	GetScanHeader(context.Context, string) (ImplResponse, error)
-	GetScanPeakCount(context.Context, string) (ImplResponse, error)
-	GetScanPeaks(context.Context, string) (ImplResponse, error)
-	GetScansData(context.Context, string) (ImplResponse, error)
+	GetScanHeader(context.Context, string, int64) (ImplResponse, error)
+	GetScanPeaks(context.Context, string, int64) (ImplResponse, error)
+	GetScansData(context.Context, string, bool, int64, int64) (ImplResponse, error)
 	GetSoftware(context.Context, string) (ImplResponse, error)
 	GetSource(context.Context, string) (ImplResponse, error)
 	PostFile(context.Context, string, *os.File) (ImplResponse, error)
