# openapi-server/src/model_get_isolation_windows_200_response_inner.go
@@ -1,0 +1,36 @@
+/*
+ * Title
+ *
+ * Title
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mzserver
+
+type GetIsolationWindows200ResponseInner struct {
+	Scan int64 `json:"Scan,omitempty"`
+
+	IsolationWindows GetIsolationWindows200ResponseInnerIsolationWindows `json:"IsolationWindows,omitempty"`
+}
+
+// AssertGetIsolationWindows200ResponseInnerRequired checks if the required fields are not zero-ed
+func AssertGetIsolationWindows200ResponseInnerRequired(obj GetIsolationWindows200ResponseInner) error {
+	if err := AssertGetIsolationWindows200ResponseInnerIsolationWindowsRequired(obj.IsolationWindows); err != nil {
+		return err
+	}
+	return nil
+}
+
+// AssertRecurseGetIsolationWindows200ResponseInnerRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of GetIsolationWindows200ResponseInner (e.g. [][]GetIsolationWindows200ResponseInner), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseGetIsolationWindows200ResponseInnerRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aGetIsolationWindows200ResponseInner, ok := obj.(GetIsolationWindows200ResponseInner)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertGetIsolationWindows200ResponseInnerRequired(aGetIsolationWindows200ResponseInner)
+	})
+}
